ProjectBox: Fixbug Overflow Text

--- a/src/components/Project/ProjectBox/ProjectBox.css
+++ b/src/components/Project/ProjectBox/ProjectBox.css
@@ -112,3 +112,9 @@
 .project__modal-feature {
     margin-top: .5rem;
 }
+
+.project__scrollable-features {
+    max-height: 160px;
+    overflow-y: auto;
+    padding-right: 10px;
+}
